--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
-  "routes": [
-    { "src": "/raw", "dest": "/api/raw.js" },
-    { "src": "/(.*)", "dest": "/public/index.html" }
-  ]
+  "functions": {
+    "api/*.lua": {
+      "runtime": "edge"
+    }
+  }
 }
